--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "node ./dev.js"
   },
   "dependencies": {
+    "@sone-dao/sone-react-utils": "^1.0.0",
     "@sone-dao/tone-react-containers": "^1.0.0"
   },
   "devDependencies": {
@@ -20,6 +21,8 @@
     "@types/react-dom": "^18.0.10",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^3.12.1",
     "rollup-plugin-dts": "^5.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
